# plectis

./: .gitignore  404.html  AGENTS.md  AGENT_ROUTES.md  ANTI_PRINCIPLES.md  ARCHITECTURE.md  AXIOMS.md  CLAUDE.md  CODEX.md  CONSTITUTION.md  CONTRIBUTING.md  CURSOR.md  DOCTRINE.md  FIRST_ACTION.md  MANIFEST.in  Makefile  NOTICE  ORGANS.md  PRINCIPLES.md  PROVENANCE.md  QUICKSTART.md  README.md  RELEASE_DISCIPLINE.md  RELEASE_REVIEW.md  SECURITY.md  SOURCE_CONTRACT.md  SOURCE_STATUS.md  _headers  _redirects  bootstrap.sh  content-manifest.json  index.html  legacy-route-manifest.json  llms.txt  microcosm-ai-reader-digest.json  plectis-ai-reader-digest.json  plectis.html  projection-status.json  pyproject.toml  robots.txt  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.well-known/: security.txt
anti_principles/: AP-1.json  AP-1.md  AP-10.json  AP-10.md  AP-11.json  AP-11.md  AP-12.json  AP-12.md  AP-13.json  AP-13.md  AP-14.json  AP-14.md  AP-15.json  AP-15.md  AP-16.json  AP-16.md  AP-17.json  AP-17.md  AP-2.json  AP-2.md  AP-3.json  AP-3.md  AP-4.json  AP-4.md  AP-5.json  AP-5.md  AP-6.json  AP-6.md  AP-7.json  AP-7.md  AP-8.json  AP-8.md  AP-9.json  AP-9.md
assets/: ai-orientation-packet.js  ai-reader-digest-packet.js  atlas-views.js  docs.js  fragment-open.js  search-index.js  style.css
atlas/: agent_task_routes.json  doctrine_lattice_entry_card.json  doctrine_lattice_graph.mmd  doctrine_lattice_health.json  entry_packet.json
axioms/: AX-1.json  AX-1.md  AX-10.json  AX-10.md  AX-11.json  AX-11.md  AX-12.json  AX-12.md  AX-2.json  AX-2.md  AX-3.json  AX-3.md  AX-4.json  AX-4.md  AX-5.json  AX-5.md  AX-6.json  AX-6.md  AX-7.json  AX-7.md  AX-8.json  AX-8.md  AX-9.json  AX-9.md
concepts/: concept.agent_reliability_and_safety_validator_bundle.json  concept.agent_reliability_and_safety_validator_bundle.md  concept.architecture_and_navigation_route_contract_bundle.json  concept.architecture_and_navigation_route_contract_bundle.md  concept.entry_and_reveal_route_readiness_bundle.json  concept.entry_and_reveal_route_readiness_bundle.md  concept.executable_doctrine_grammar_standard_bundle.json  concept.executable_doctrine_grammar_standard_bundle.md  concept.first_screen_doctrine_effect_frame.json  concept.first_screen_doctrine_effect_frame.md  concept.formal_math_and_proof_witness_bundle.json  concept.formal_math_and_proof_witness_bundle.md  concept.import_projection_and_drift_control_bundle.json  concept.import_projection_and_drift_control_bundle.md  concept.research_and_science_replay_evidence_bundle.json  concept.research_and_science_replay_evidence_bundle.md  concept.standards_meta_diagnostics_bundle.json  concept.standards_meta_diagnostics_bundle.md  concept.voice_to_doctrine_self_improvement_loop_bundle.json  concept.voice_to_doctrine_self_improvement_loop_bundle.md  concept.work_landing_and_continuity_control_bundle.json  concept.work_landing_and_continuity_control_bundle.md
core/: architecture_kernel.json  authority_boundary.json  axiom_organ_routing.json  axiom_support_authority_scope_order.json  axiom_support_ceiling_dimensions.json  axiom_support_checker_scope_order.json  axiom_support_domain_scope_order.json  axiom_support_freshness_state_order.json  axiom_support_projection_scope_order.json  axiom_support_provenance_order.json  component_public_synopses.json  doctrine_enrichment.json  doctrine_enrichment_health.json  doctrine_lattice_coverage.json  doctrine_lattice_relations.json  doctrine_reader_projection.json  executable_doctrine_grammar.json  mechanism_sources.json  organ_atlas.json  organ_evidence_classes.json  organ_families.json  organ_registry.json  paper_module_capsules.json  pattern_assimilation_policy.json  pattern_binding_contract.json  private_state_forbidden_classes.json  public_claim_cards.json  public_standard_pressure.json  public_surface_manifest.json  source_module_refresh_policy_v0.json  standards_registry.json  substrate_substitution_ledger.json
docs/: architecture-graph-scene.json  architecture.html  area-agent-reliability.html  area-architecture.html  area-continuity.html  area-entry.html  area-formal-math.html  area-import-drift.html  area-research.html  coding-agents.html  component-agent-benchmark-integrity-anti-gaming-replay.html  component-agent-closeout-faithfulness-audit.html  component-agent-memory-temporal-conflict-replay.html  component-agent-monitor-redteam-falsification-replay.html  component-agent-route-observability-runtime.html  component-agent-sabotage-scheming-monitor-replay.html  component-agent-sandbox-policy-escape-replay.html  component-agentic-vulnerability-discovery-patch-proof-replay.html  component-annex-knowledge-routing.html  component-batch10-cold-eval-honesty-capsule.html  component-batch10-governance-compilers-capsule.html  component-batch10-live-source-drift-capsule.html  component-batch11-saturation-engines-capsule.html  component-batch12-market-dashboard-read-model-capsule.html  component-batch12-prediction-market-board-capsule.html  component-batch12-release-claim-language-gate.html  component-batch4-proof-authority-runtime.html  component-batch5-authority-systems-capsule.html  component-batch6-unsurfaced-primitives-capsule.html  component-batch7-demo-take-console-capsule.html  component-batch7-macro-engines-capsule.html  component-batch7-oracle-sibling-capsule.html  component-batch7-secondary-runtime-capsule.html  component-batch8-audio-level-rms-port.html  component-batch8-compliance-pipeline-capsule.html  component-batch8-policy-engines-capsule.html  component-batch8-structural-theses-capsule.html  component-batch8-tools-tail-primitives-capsule.html  component-batch8-validator-checker-capsule.html  component-batch9-macro-engines-capsule.html  (+178 more)
mechanisms/: mechanism.agent_benchmark_integrity_anti_gaming_replay.validates_public_benchmark_integrity_replay.json  mechanism.agent_benchmark_integrity_anti_gaming_replay.validates_public_benchmark_integrity_replay.md  mechanism.agent_closeout_faithfulness_audit.validates_closeout_evidence_claims.json  (+197 more)
organs/: agent_benchmark_integrity_anti_gaming_replay.json  (+163 more)
(+4618 files in other folders)
